# rbrotli-enc

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
bounded-utils/: Cargo.toml
bounded-utils/src/: lib.rs
clib/: Cargo.toml  build.rs  cbindgen.toml  rbrotli_enc.h
clib/src/: lib.rs
hugepage-buffer/: Cargo.toml
hugepage-buffer/src/: lib.rs
hugepage-slice/: Cargo.toml
hugepage-slice/src/: lib.rs
lib/: Cargo.toml
lib/benches/: bench.rs
lib/data/: apple_home.html  bootstrap.min.css  brotlidump.py  enwik8  jquery-3.7.1.min.js  large-js-corpus.js
lib/src/: bitwriter.rs  compress.rs  constants.rs  hashtable.rs  huffman.rs  lib.rs  map_to_sym.rs  metablock.rs
lsb-bitwriter/: Cargo.toml
lsb-bitwriter/src/: lib.rs
safe-arch/: Cargo.toml
safe-arch-macro/: Cargo.toml
safe-arch-macro/src/: lib.rs
safe-arch/src/: lib.rs
safe-arch/src/x86_64/: avx.rs  avx2.rs  mod.rs  sse.rs  sse2.rs  sse3.rs  sse41.rs  sse42.rs  ssse3.rs  wrappers.rs
