[package]
name = "bounded-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0.14"
zerocopy = { version = "0.7.32", features = ["derive"] }
lsb-bitwriter = { path = "../lsb-bitwriter", optional = true }

[lints]
workspace = true
