[package]
name = "rbrotli-enc-clib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rbrotli-enc-lib = { path = "../lib" }

[build-dependencies]
cbindgen = "0.24.0"

[lints]
workspace = true
