[package]
name = "rbrotli-enc-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hugepage-slice = { path = "../hugepage-slice" }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false
