[package]
name = "rbrotli-enc-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hugepage-buffer = { path = "../hugepage-buffer" }
lsb-bitwriter = { path = "../lsb-bitwriter" }
safe-arch = { path = "../safe-arch" }
zerocopy = { version = "0.7.32", features = ["derive"] }
bounded-utils = { path = "../bounded-utils", features = ["lsb-bitwriter"] }

[features]
nightly = ["safe-arch/nightly"]

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false

[lints]
workspace = true
